<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--  id must be the same here as it is in nav_graph.xml  -->
    <item
        android:id="@+id/homeContainerFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <!--  id must be the same here as it is in nav_graph.xml  -->
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />
    <!--  id must be the same here as it is in nav_graph.xml  -->
    <item
        android:id="@+id/classroomContainerFragment"
        android:icon="@drawable/ic_classroom"
        android:title="@string/title_classroom" />
    <!--  id must be the same here as it is in nav_graph.xml  -->

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />

</menu>