<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp">

    <TextView
        android:id="@+id/registration_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48sp"
        android:layout_marginBottom="48sp"
        android:text="@string/app_name_text"
        android:textSize="32sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_email_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registration_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address_hint"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_username_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registration_username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_password_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registration_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_confirm_password_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registration_confirm_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/account_type"
        android:layout_gravity="center"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/radio_user_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/standard_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/standard_radio_button"
            android:layout_weight="1"
            android:layout_margin="4sp"/>

        <RadioButton
            android:id="@+id/student_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_radio_button"
            android:layout_weight="1"
            android:layout_margin="4sp"/>

        <RadioButton
            android:id="@+id/teacher_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teacher_radio_button"
            android:layout_weight="1"
            android:layout_margin="4sp"/>
    </RadioGroup>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/registration_register_login_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/login_button"
            android:layout_margin="8sp"/>

        <Button
            android:id="@+id/registration_register_register_btn"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sign_up_button"
            android:layout_margin="8sp"/>

    </LinearLayout>

</LinearLayout>