<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.WelcomeFragment">

    <TextView
        android:id="@+id/welcome_tile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150sp"
        android:layout_marginBottom="175sp"
        android:layout_gravity="center"
        android:text="@string/app_name_text"
        android:textSize="50sp" />

    <Button
        android:id="@+id/welcome_start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start_button" />

    <LinearLayout
        android:id="@+id/welcome_login_signup_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/welcome_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:text="@string/login_button" />

        <Button
            android:id="@+id/welcome_signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="?colorOnBackground"
            android:text="@string/sign_up_button" />

    </LinearLayout>


</LinearLayout>