<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        style="@style/Widget.Material3.CardView.Elevated">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/student_portfolio_cash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/portfolio_cash_0_00"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"/>

            <TextView
                android:id="@+id/student_portfolio_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/value_0_00"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/stock_holdings"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/student_portfolio_stocks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"/>

    <TextView
        android:id="@+id/no_socks_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/no_socks"
        android:visibility="gone"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>


</LinearLayout>